# Requirements-are-all-you-need

./: README.md
prompts/: design.md  follow_up_questions.md  requirements.md  system_prompt.md  task.md  task.prompt.md
requirements-chatbot/: Makefile  README.md
requirements-chatbot/backend/: .env.example  README.md  agent.py  main.py  pyproject.toml
requirements-chatbot/backend/docs/: API_DOCUMENTATION.md
requirements-chatbot/backend/ipynb/: graph_api.ipynb  multi_agents.ipynb  requirements_agents.ipynb
requirements-chatbot/backend/prompts/: system_prompt.md
requirements-chatbot/backend/src/: agent.py  gemini_langsmith_wrapper.py  graph_node.py  tool.py
requirements-chatbot/frontend/: package.json  pnpm-lock.yaml
requirements-chatbot/frontend/docs/: TASK.md
requirements-chatbot/frontend/src/: App.tsx  index.css
requirements-chatbot/frontend/src/components/chat/: ClearChatDialog.tsx  ErrorAlert.tsx  MessageInput.tsx  MessageItem.tsx  MessageList.tsx
requirements-chatbot/frontend/src/hooks/: useChat.ts
requirements-chatbot/frontend/src/services/: chatService.ts
